infer/tests/codetoanalyze/cpp/errors/templates/function_pack.cpp
../../frontend/templates/function_pack.cpp